[project]
name = "llm-meter"
version = "0.1.0"
description = "Reverse-proxy that meters token usage of OpenAI/Anthropic-compatible LLM endpoints"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_meter"]
